syntax = "proto3";
option go_package = "github.com/satont/tsuwari/libs/grpc/generated/api/api";
package api.bots;

message BotInfo {
	bool isMod = 1;
	string botId = 2;
	string botName = 3;
	bool enabled = 4;
}

message BotJoinPartRequest {
	enum Action {
		JOIN = 0;
		LEAVE = 1;
	}

	Action action = 1;
}
